--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -8,9 +8,9 @@ $code-font: Monaco, "Courier New", "DejaVu Sans Mono", "Bitstream Vera Sans Mono
 $alt-font: $base-font;
 
 // COLOR ======================================================
-$bodycolor      : #fff;
+$bodycolor      : #246; // #fff;
 $body-color     : $bodycolor;
-$textcolor      : #333332;
+$textcolor      : #fdb; // #333332;
 $text-color     : $textcolor;
 $border-color   : $text-color;
 $basecolor 		  : #343434;	  
