more color tweaks

--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -10,10 +10,10 @@ $alt-font: $base-font;
 // COLOR ======================================================
 $bodycolor      : #246; // #fff;
 $body-color     : $bodycolor;
-$textcolor      : #fdb; // #333332;
+$textcolor      : #fc8; // #333332;
 $text-color     : $textcolor;
 $border-color   : $text-color;
-$basecolor 		  : #343434;	  
+$basecolor 		  : #eb7; // #343434;	  
 $compcolor 		  : spin($basecolor, 180); 
 $bordercolor    : $basecolor;
 $white          : #fff;
@@ -28,7 +28,7 @@ $danger				: #C64537;
 $info				  : #308cbc;
 
 // Links
-$linkcolor 		    : #343434;
+$linkcolor 		    : #f80; // #343434;
 $link-color       : $linkcolor;
 $linkcolorhover 	: darken($linkcolor, 10);
 $linkcolorvisited : lighten($linkcolorhover, 20);
