--- a/_sass/pygments.scss
+++ b/_sass/pygments.scss
@@ -1,8 +1,8 @@
 .highlight {
-	background-color: #efefef;
+	background-color: #024; // #efefef;
 	font-family: $code-font;
 	@include font(12);
-	color: #333332;
+	color: #fde; // #333332;
 	margin-bottom: 1.5em;
 	@include rounded(4px);
 	pre {
