--- a/static/dark.css
+++ b/static/dark.css
@@ -10,7 +10,11 @@ body {
   color: #fcb514; }
 
 .header {
-  color: black; }
+  color: 444;
+  background-color: #000;
+  width: 100%;
+  text-align: center;
+}
 
 .grid img {
   border-color: black; }
