--- a/static/dark.css
+++ b/static/dark.css
@@ -10,7 +10,7 @@ body {
   color: #fcb514; }
 
 .header {
-  color: 444;
+  color: #444;
   background-color: #000;
   width: 100%;
   text-align: center;
