header background test

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,7 +34,7 @@
     </div>
 </div>
 
-<div class="header">
+<div class="header" style="background-image: url('http://laps.noaa.gov/albers/sos/saturn/mimas/mimas_rgb_cyl_www.jpg');">
     <div class="content">
         <h1 class="title">
             {% if page.subtitle %}
